# cmake_RUBLIC_PRIVATE_INTERFACE_demo

./: CMakeLists.txt  README.md  main.c
aux_thirdprint/: aux_thirdprint.h
myprint/: CMakeLists.txt  myprint.c  myprint.h
secondprint/: CMakeLists.txt  secondprint.c  secondprint.h
thirdprint/: CMakeLists.txt  thirdprint.c  thirdprint.h
